--- a/slick-testkit/src/main/resources/testkit-reference.conf
+++ b/slick-testkit/src/main/resources/testkit-reference.conf
@@ -17,6 +17,7 @@ testkit {
   # All TestkitTest classes to run
   testPackage = com.typesafe.slick.testkit.tests
   testClasses = [
+    ${testPackage}.MappedColumnTest
     ${testPackage}.ThreeWayJoinTest
     ${testPackage}.ActionTest
     ${testPackage}.AggregateTest
